antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__image_preparation_restored_input.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2688
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
   [Image #1]

 ┃ [Image #2] describe $file

  gpt-5.6-sol default · /tmp/project
